flipCard jump Fix

--- a/src/styles/App1.less
+++ b/src/styles/App1.less
@@ -991,6 +991,9 @@ main {
   margin-top: 5px !important;
 
 }
+.react-card-flip{
+    display:flex;
+}
 
 .rc-tooltip {
   font-family: 'Montserrat';
